# hello-anchor

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
programs/hello-anchor/: Cargo.toml
programs/hello-anchor/src/: lib.rs
test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-101-A5DKt4DdoRZ9LqFcgxJct5DdoSedaSJtJAj3qNxR9rEs.tar.bz2  snapshot-4701-AHAV9J9bWZc1BNi4AjvxxVfhoTPpT3poqfGvRW4DVpM1.tar.bz2  snapshot-4801-Gj3Bco4nhzTgPt9geFsYhHfDSeKJ9Ri25acnV4f66aQ8.tar.bz2  validator-keypair.json  vote-account-keypair.json
test-ledger/accounts/: 0.2  1008.21  1101.22  1103.23  1201.24  1210.25  1301.26  1331.27  1401.28  1406.29  1501.30  1510.31  1601.32  1612.33  1701.34  1709.35  1801.36  1812.37  1901.38  1914.39  2001.40  2024.41  2101.42  2127.43  2201.44  2202.45  2301.46  2312.47  2401.48  2418.49  2501.50  2520.51  2601.52  2606.53  2701.54  2702.55  2801.56  2814.57  2901.58  2912.59  (+43 more)
test-ledger/rocksdb/: 000514.sst  000517.sst  000519.sst  000530.sst  000534.sst  000536.sst  000540.sst  000543.sst  000546.sst  000548.sst  000550.sst  000552.sst  000554.sst  IDENTITY  LOG  LOG.old.1644917097926690  LOG.old.1644917213707012  MANIFEST-000136
test-ledger/snapshot/4101/: 4101
test-ledger/snapshot/4201/: 4201
test-ledger/snapshot/4301/: 4301
test-ledger/snapshot/4401/: 4401
test-ledger/snapshot/4501/: 4501
test-ledger/snapshot/4601/: 4601
test-ledger/snapshot/4701/: 4701
test-ledger/snapshot/4801/: 4801
tests/: hello-anchor.ts
