[package]
name = "hello-anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[lib]
crate-type = ["cdylib", "lib"]
name = "hello_anchor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
solana-program = ">=1.18.2"
